force-app/main/default/objects/Business_Unit__c/Business_Unit__c.object-meta.xml
<CustomObject>
    <description>This object will save all information related to the Business Units...</description>
    <label>Business Unit</label>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>