force-app/main/default/objects/Business_Unit__c/fields/Business_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Code__c</fullName>
    <description>.</description>
    <label>Business Unit Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>