force-app/main/default/objects/Business_Unit__c/fields/Oracle_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Organization_Name__c</fullName>
    <description>.</description>
    <label>Oracle Organization Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>