force-app/main/default/objects/Business_Unit__c/fields/Oracle_Source_Template_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Source_Template_Number__c</fullName>
    <description>.</description>
    <label>Oracle Source Template Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>