force-app/main/default/objects/Business_Unit__c/fields/OraclePrimaryBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>OraclePrimaryBusinessUnit__c</fullName>
    <description>.</description>
    <label>OraclePrimaryBusinessUnit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>