force-app/main/default/objects/Business_Unit__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>.</description>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>