force-app/main/default/objects/Business_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OraclePrimaryBusinessUnit__c</columns>
    <columns>Village__c</columns>
    <columns>Oracle_Source_Template_Number__c</columns>
    <columns>Business_Unit_Code__c</columns>
    <columns>Oracle_Organization_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>